--- a/pro/index.html
+++ b/pro/index.html
@@ -7,10 +7,6 @@
         <title>Document</title>
     </head>
     <body>
-        <button id="fuck">fuck</button>
-        <script>
-            const fuck = document.getElementById("fuck");
-            fuck.addEventListener("click", e => {});
-        </script>
+        <div id="root"></div>
     </body>
 </html>
