--- a/server/public/resources/index.html
+++ b/server/public/resources/index.html
@@ -9,5 +9,8 @@
     </head>
     <body>
         <h3>资源清单</h3>
+        <ul>
+            <li>📂<a href="./cdn/FreeChat1.0.0-setup.exe">FreeChat1.0.0-setup.exe</a> </li>
+        </ul>
     </body>
 </html>
