feat: add delete friend

--- a/server/public/resources/index.html
+++ b/server/public/resources/index.html
@@ -10,7 +10,11 @@
     <body>
         <h3>资源清单</h3>
         <ul>
-            <li>📂<a href="./cdn/FreeChat1.0.0-setup.exe">FreeChat1.0.0-setup.exe</a> </li>
+            <li>
+                📂<a href="./cdn/FreeChat1.0.0-setup.exe"
+                    >FreeChat1.0.0-setup.exe</a
+                >
+            </li>
         </ul>
     </body>
 </html>
