--- a/client/src/render/index.html
+++ b/client/src/render/index.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>有趣的玩意</title>
+        <script src="./iconfont/iconfont.js"></script>
     </head>
     <body>
         <div id="root"></div>
